Fix button icon intent color in dark mode

--- a/packages/core/src/components/button/_button.scss
+++ b/packages/core/src/components/button/_button.scss
@@ -136,7 +136,9 @@ Styleguide button
       }
 
       #{$icon-classes} {
-        color: $pt-dark-icon-color;
+        &:not([class*="#{$ns}-intent-"]) {
+          color: $pt-dark-icon-color;
+        }
       }
     }
 
